Base de Dados Atualizada
Projeto com uma base de dados atualizada pois a anterior apesar de não causar problemas no objetivo do projeto em si, ela não foi criada da maneira mais eficiente.

--- a/leagueTables/templates/leagueTables/home.html
+++ b/leagueTables/templates/leagueTables/home.html
@@ -3,8 +3,8 @@
 {% block main %}
    {% for liga in ligas %}
       <!-- <p>{{ liga.nome }}</p> -->
-       <a href="{% url 'liga' liga.id %}" class="btn btn-sucess"> {{ liga.nome }}</a>
+       <a href="{% url 'leagueTables:liga' liga.id %}" class="btn btn-sucess"> {{ liga.nome }}</a>
    {% endfor %}
-    <a href="{% url 'novoClube' %}" class="btn btn-sucess"> Teste Adicionar Clube </a>
-    <a href="{% url 'novaLiga' %}" class="btn btn-sucess"> Teste Adicionar Liga </a>
+    <a href="{% url 'leagueTables:novoClube' %}" class="btn btn-sucess"> Teste Adicionar Clube </a>
+    <a href="{% url 'leagueTables:novaLiga' %}" class="btn btn-sucess"> Teste Adicionar Liga </a>
 {% endblock %}
